:zap: 优化代码
此次提交包括：
1. 除去TypeUtils不必要的方法
2. Transformer泛型化
3. CallbackGenerator#generate()方法参数泛型化
3. 使用Modifier代替TypeUtils中的方法